# CROUS-assistant-Collector

./: .gitignore  Cargo.toml  README.md  diagrams.md  openapi.yaml  openapi.yml  pom.xml  test.html
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: Integration-test.yml  OpenApi.yml  SonarCloud.yml  archiving-day.yml  archiving-hour.yml  archiving.yml  build-release.yml  cache_bin.yml  codeql-analysis.yml  create_bin.yml  javadoc-publish.yml  playwright.yml  release.yml  reusable-archiving.yml  sonar.yml  update-all-logements.yml
archive/: all_logements
archive/2024-01-18/: all_logements
archive/available/2024-01-01/: sum-up
archive/available/2024-01-02/: sum-up
archive/available/2024-01-09/: sum-up
archive/available/2024-01-13/: sum-up
archive/available/2024-01-15/: sum-up
archive/available/2024-01-18/: sum-up
archive/available/2024-01-22/: sum-up
archive/available/2024-01-25/: sum-up
archive/available/2024-02-01/: 00  03  07  12  13  15  19  20
archive/available/2024-02-02/: 00  05  11  14  16  20  22
archive/available/2024-02-03/: 10  14  15  18  20  21
archive/available/2024-02-04/: 05  16  17
archive/available/2024-02-05/: 02  07  08  13  14  16  22  23
archive/available/2024-02-06/: 08  09  10  21
docs/: openapi.json
src/: crous_mongodb.rs  main.rs  requestor.rs
tests/: mongodb_mock_tests.rs
v1/logements-crous/: all_logements  hash_all_logements
v1/logements-crous/available/: all_logements
v2/: hash_residences  residences
v2/available-residences-id/2024-01-01/: 02  03  10  11  13  17  18
v2/available-residences-id/2024-01-02/: 01  02  04  07  08  09  10  11  13  14  15  16  18  21  22
v2/available-residences-id/2024-01-03/: 03  06  09  11  13  16  19  20  21  22  23  sum-up
v2/available-residences-id/2024-01-04/: 04  06  (+6 more)
(+5114 files in other folders)
