[package]
name = "crous_assistant_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
mongodb = "3.1"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.5"
