[package]
name = "crous_assistant_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.46", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
mongodb = "3.2.4"
serde_json = "1.0.141"
log = "0.4"
env_logger = "0.11.8"
chrono = "0.4"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.20.0"
wiremock = "0.6"
mockall = "0.13"

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Link-Time Optimization
debug = false     # Exclude debug symbols
codegen-units = 1 # Improve optimization by reducing codegen units
panic = 'abort'   # Reduce binary size by not including panic unwinding
